Story #16712: Wire CAS home-realm discovery to the IAM resolveHrd endpoint
The login dispatch decided the realm itself: it listed users by email,
matched identity-provider patterns locally (case-sensitively, first match
wins) and fetched customers separately. Ask the IAM resolveHrd endpoint
instead, which returns one entry per customer with its provider, internality
and user status already resolved. ListCustomersAction no longer needs the
providers cache nor the local helper; DispatcherAction keeps the providers
cache only to look up the pac4j client used for the external redirection.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JSZJFJWuRAfX2jqaoDGKTv